# property_prices

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: deploy.yml
.github/workflows/: deploy.yml
property_price_visualisation/: index.html
property_prices/: aggregate_dataset.py  extract_transform_load.py  generate_website_data.py  predictive_modelling.py  test_data_store.ipynb  visualisation.py
public/: model_predictions.csv
sql/: README.md  aggregate_yearly.sql  analyse_properties.sql  analyse_transactions.sql  calculate_accuracy.sql  clean_dataset.sql  export_data_to_csv.sql  house_price_index.sql  hpi_predictions.sql  load_data.sql  make_predictions.sql  transform.sql
web/: property_price_visualisation.py
web/output/: index.html
web/public/: 2025_predictions.csv  avg_yearly_sales.csv  example_prediction.csv  example_prediction_best.csv  example_prediction_worst.csv  hpi_accuracy.csv  hpi_avg_yearly_sales.csv  linear_model_12_years.csv  linear_model_4_years.csv  linear_model_8_years.csv  linear_prediction_errors.csv  national_year_avg.csv  predictions_with_many_transactions.csv  price_distribution.csv  transaction_summary.csv  transactions_cleaned_by_year.csv  worst_predictions.csv  yearly_accuracy.csv
