[project]
name = "property-prices"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.2",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "polars>=1.35.2",
    "seaborn>=0.13.2",
    "vortex-data>=0.55.0",
]



[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "I", # isort
    "PGH", # flake8-pygrep-hooks
    "C4", # flake8-comprehensions
    "A", # flake8-builtins
]
ignore = ["PGH003", "PGH004"]